<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.winphyoethu.netflixmovieregionsearch.features.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.winphyoethu.netflixmovieregionsearch.features.main.ui.savedmovie.SavedMovieFragment"
        android:label="@string/title_saved_movie"
        tools:layout="@layout/fragment_saved_movie" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.winphyoethu.netflixmovieregionsearch.features.main.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <dialog
        android:id="@+id/navigation_filter"
        android:name="com.winphyoethu.netflixmovieregionsearch.features.main.BottomSheetFilter"
        android:label="Filter"
        tools:layout="@layout/bottom_sheet_filter" />

</navigation>