<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.main.ui.about.AboutFragment">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdvLogo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderImageScaleType="centerCrop"
        app:roundedCornerRadius="100dp"
        app:viewAspectRatio="1" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jost_bold"
        android:text="Netflix Search"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sdvLogo" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jost_regular"
        android:text="Version 1.1.1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <Button
        android:id="@+id/tvRateApplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/indigo_800"
        android:fontFamily="@font/jost_regular"
        android:padding="8dp"
        android:text="@string/label_rate_application"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVersion" />

    <Button
        android:id="@+id/tvShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/indigo_800"
        android:fontFamily="@font/jost_regular"
        android:padding="8dp"
        android:text="@string/label_share_application"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRateApplication" />

    <Button
        android:id="@+id/tvLibraries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/indigo_800"
        android:fontFamily="@font/jost_regular"
        android:padding="8dp"
        android:text="@string/label_used_libraries"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShare" />

</androidx.constraintlayout.widget.ConstraintLayout>