<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AvailableCountryCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvAvailableRegionHeader"
            style="@style/AvailableCountryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_region"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAvailableRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_regular"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tvAvailableRegionHeader"
            app:layout_constraintTop_toTopOf="@id/tvAvailableRegionHeader" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdvAvailableCountryFlag"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/tvAvailableRegion"
            app:layout_constraintTop_toTopOf="parent"
            app:roundedCornerRadius="4dp" />

        <TextView
            android:id="@+id/tvAvailableSubtitleHeader"
            style="@style/AvailableCountryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_subtitle"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAvailableRegion" />

        <TextView
            android:id="@+id/tvAvailableSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_regular"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvAvailableSubtitleHeader"
            app:layout_constraintTop_toTopOf="@id/tvAvailableSubtitleHeader" />

        <TextView
            android:id="@+id/tvAvailableAudioHeader"
            style="@style/AvailableCountryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_audio"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAvailableSubtitle" />

        <TextView
            android:id="@+id/tvAvailableAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_regular"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvAvailableAudioHeader"
            app:layout_constraintTop_toTopOf="@id/tvAvailableAudioHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>